--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
       - uses: actions/checkout@master
 
       - name: Build and Push
-        uses: naka-gawa/image_assembly_line@develop
+        uses: naka-gawa/image_assembly_line@add_slack_notfiy
         with:
           image_name: tmnakagawa/actions-example
           target: build
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
