--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -5,7 +5,7 @@ name: ci/docker Build and Push
 # 以下のタイミングは追加してください
 on:
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '０ 9 * * *'
 
 env:
   REGISTRY_NAME: 167855287371.dkr.ecr.ap-northeast-1.amazonaws.com
