review add-scan-exit-code-input

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,5 +7,10 @@ jobs:
   rodump:
     runs-on: self-hosted
     steps:
-      - name: output hostname
-        run: hostname
+      - name: chekout
+        uses: actions/checkout@master
+      - name: assembly_line
+        uses: C-FO/image_assembly_line@add-scan-exit-code-input
+        with:
+          image_name: build-image/app
+          no_push: true
